# old-skool-code

./: .gitignore  CChemistry.cpp  CChemistry.h  README.md  buttons.c  gtkhello.c  gtkhello2.c  kde2emenu.pl  main.cpp  menviron.c  mybufo.c  quickbackup.h  radiobuttons.c
Access/: Amanda.mdb  RMADB.mdb  mp1.mdb
C++/: 10-1-1.CPP  10-1p.cpp  10-1p.dsp  10-1p.dsw  10-1p.ncb  10-1p.opt  10-1p.plg  10-2-1.CPP  10-2p.cpp  10-2p.dsp  10-2p.dsw  10-2p.ncb  10-2p.opt  10-2p.plg  10-3p.cpp  10-3p.dsp  10-3p.dsw  10-3p.ncb  10-3p.plg  11-4.cpp  19-6~1.cpp  5-1.CPP  5-5.CPP  5-5.dsw  5-5.plg  5-9.CPP  5-9.dsp  5-9.dsw  5-9.plg  6-1.cpp  6-1.dsp  6-1.dsw  6-1.opt  6-1.plg  6-4.cpp  6-4.dsp  6-4.dsw  6-4.opt  6-4.plg  6-5.cpp  (+293 more)
C++/5-5/: 5-5.cpp  5-5.dsp  5-5.opt  5-5.plg
C++/ElementQuiz-0.1.2/: Makefile  Makefile.am  config.h  configure  configure.in  elementquiz.kdevprj
C++/ElementQuiz-0.1.2/elementquiz/: elementquiz.h  elementquiz.moc.cpp  elementquizdoc.h  elementquizview.moc.cpp
C++/ElementQuiz-0.1.2/elementquiz/.deps/: elementquizdoc.P  elementquizview.moc.P  main.P
C++/ElementQuiz-0.1.2/elementquiz/docs/en/: Makefile  index-3.html  index-6.html  index.html  index.sgml
C++/LWM/: Makefile  Makefile.in  config.h  configure.in  lwm.kdevprj
C++/LWM/lwm/: Makefile  Makefile.am  Makefile.in  wmmain.cpp  wmrootwindow.cpp  wmscreen.cpp  wmscreen.h
C++/LWM/lwm/docs/: Makefile.in
C++/LWM/lwm/docs/en/: Makefile  index-1.html  index-2.html  index-4.html  index-5.html  index-6.html  index.html
C++/brestore/: #brestore.h#  AUTHORS  Makefile  Makefile.am  Makefile.in  am_edit  config.cache  config.h  libtool
C++/chapter11/: 1.txt  11-1p.cpp  11-1p.dsp  11-1p.dsw  11-1p.ncb  11-1p.plg  116file.dat.txt  Address.dat.txt  CONVERT2.cpp  CONVERT2.dsp  CONVERT2.dsw  CONVERT2.ncb  CONVERT2.opt  CONVERT2.plg  E11-3.CPP  E11-3.DSP  E11-3.DSW  (+107 more)
C++/darksidewmcpp/darksidewmcpp/: Makefile.am  Makefile.in  basedisplay.cpp  basedisplay.h~  display.h
C++/darksidewmcpp/darksidewmcpp/docs/: Makefile
C++/darksidewmcpp/darksidewmcpp/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index.html  index.sgml
C++/elementquiz/elementquiz/: Makefile.am  Makefile.in  chem.key.1.txt  elementquizdoc.cpp  elementquizfile.cpp  elementquizview.h  elementquizview.moc.cpp  resource.h
C++/elementquiz/elementquiz/.deps/: elementquiz.moc.P  elementquizdoc.P  elementquizview.moc.P
C++/elementquiz/elementquiz/docs/: Makefile
C++/elementquiz/elementquiz/docs/en/: Makefile.am  Makefile.in  index-4.html  index-6.html  index.html
C++/wmmenu/wmmenu/: Makefile  Makefile.am  Makefile.in  main.cpp  wmmenu  wmmenu.h  wmmenu.moc.cpp  wmmenudoc.cpp  wmmenuview.cpp  wmmenuview.moc.cpp
C++/wmmenu/wmmenu/.deps/: main.P  wmmenu.P  wmmenu.moc.P
C++/wmmenu/wmmenu/docs/: Makefile  Makefile.in
C++/wmmenu/wmmenu/docs/en/: Makefile.in  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html
C/DarkSideWM-0.1.1-3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  darksidewm.kdevprj  darksidewm.lsm
C/DarkSideWM-0.1.1-3/darksidewm/: DarkSideButtons.c  DarkSideButtons.h  Makefile  Makefile.am  Makefile.in  darksidebutton.c  darksidedesktop.h  darksideinit.h  darksidekeyboard.c  darksidekeyboard.h  darksidemenu.h  darksidemouse.h  darksidetitlebar.c  darksidetitlebar.h  darksidewindow.c  darksidewindow.c~  darksidewindow.h  darksidewindow.h~  darksidewinlist.c  darksidewinlist.h  darksidewm.c  darksidewm.h  darksideworkspace.c  darksideworkspace.h  main.c  structures.h  style.c  style.c~  style.h
C/DarkSideWM-0.1.1-3/darksidewm/.deps/: darksidetitlebar.pp  darksidewindow.pp  darksidewm.P  main.P  main.pp  style.pp
C/DarkSideWM-0.1.1-3/darksidewm/docs/: Makefile  Makefile.in
C/DarkSideWM-0.1.1-3/darksidewm/docs/en/: Makefile  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
J++/: FirstTest.java
Java/: ChemApplet.java  ChemistryQuiz.java  DBPersistance.java  JCheckBook.java  JCheckBook.java.bak  JElementQuiz.java  SQLTest.java  Test.java  Test.java.bak  TestTableClass.java  TestTableClass.java.bak  a.java  table.c  xline.c
Jpp/: FirstTest.java
Visual Basic .NET/: AppointmentProgram-plyon.rar  lab3.rar  plyon-lab4.rar
c++/: 10-1-1.CPP  10-1p.cpp  10-1p.dsp  10-1p.dsw  10-1p.plg  10-2-1.CPP  10-2p.cpp  10-2p.dsp  10-2p.dsw  10-2p.plg  10-3p.cpp  10-3p.dsp  10-3p.dsw  10-3p.opt  10-3p.plg  11-4P.CPP  19-6~1.cpp  5-1.CPP  5-5.cpp  5-5.dsw  5-5.ncb  5-5.opt  5-5.plg  5-9.CPP  5-9.dsp  5-9.dsw  5-9.ncb  5-9.opt  5-9.plg  6-1.cpp  6-1.dsp  6-1.dsw  6-1.ncb  6-1.plg  6-4.cpp  6-4.dsp  6-4.dsw  6-4.ncb  6-4.plg  6-5.cpp  (+303 more)
c++/LWM/: Makefile.am  config.cache  config.status  configure  lwm.lsm
c++/LWM/lwm/: main.cpp  wmdisplay.cpp  wmdisplay.h  wmmain.h  wmrootwindow.h
c++/LWM/lwm/docs/: Makefile
c++/LWM/lwm/docs/en/: Makefile.in  index-3.html  index.sgml
c++/brestore/brestore/: Makefile.am  Makefile.in  brestore.cpp  brestore.h  brestoredoc.h  brestoreview.cpp  resource.h
c++/brestore/brestore/docs/: Makefile.in
c++/brestore/brestore/docs/en/: Makefile  Makefile.am  index-6.html  index.html
c++/chemistry/: Makefile.am  Makefile.in  chemistry.kdevprj  config.h  config.status  configure
c++/chemistry/chemistry/: Makefile  Makefile.am  chemistry  chemistrydoc.cpp  chemistrydoc.h  chemistryview.cpp  chemistryview.h  main.cpp
c++/chemistry/chemistry/.deps/: chemistrydoc.P  chemistrydoc.moc.P
c++/chemistry/chemistry/docs/: Makefile  Makefile.in
c++/chemistry/chemistry/docs/en/: Makefile  Makefile.am  index-1.html  index-5.html  index.html
c++/quickbackup/quickbackup/: Makefile.am  cdirectorynode.cpp  cdirlistview.cpp  cfilebrowse.cpp  cfilebrowse.h  quickbackupdoc.h  quickbackupdoc.moc.cpp  quickbackupview.moc.cpp  resource.h
c++/quickbackup/quickbackup/.deps/: cdirlistview.P  cfilebrowse.P  quickbackupdoc.moc.P  quickbackupview.P
c++/quickbackup/quickbackup/docs/en/: Makefile.am  Makefile.in  index-2.html  index-3.html  index-4.html  index-6.html
(+1324 files in other folders)
