####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = lwm
lwm_SOURCES = wmdisplay.cpp wmscreen.cpp wmmain.cpp wmrootwindow.cpp main.cpp 
lwm_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp wmrootwindow.cpp wmrootwindow.h wmmain.cpp wmmain.h wmscreen.cpp wmscreen.h wmdisplay.cpp wmdisplay.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = lwm

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
lwm_LDFLAGS = $(all_libraries) 
                                                                                
