####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = darksidewmcpp
darksidewmcpp_SOURCES = basedisplay.cpp main.cpp 
darksidewmcpp_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp basedisplay.cpp basedisplay.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = darksidewmcpp
