####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = darksidewm
darksidewm_SOURCES = darksidetitlebar.c darksidebutton.c darksidekeyboard.c darksidewinlist.c DarkSideButtons.c darksideworkspace.c style.c darksidewindow.c darksidewm.c main.c 
darksidewm_LDADD   = -L/usr/X11R6/lib -lX11

SUBDIRS = docs 

EXTRA_DIST = main.c darksidewm.h darksidewindow.h darksidewinlist.h darksidewm.c DarkSideButtons.h darksideinit.h darksidewindow.c style.h style.c darksidetitlebar.h darksideworkspace.h darksideworkspace.c DarkSideButtons.c darksidewinlist.c darksidekeyboard.h darksidekeyboard.c darksidemouse.h darksidebutton.c darksidetitlebar.c darksidemenu.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = darksidewm
