####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index.html $(prefix)/doc/chemistry/index.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-1.html $(prefix)/doc/chemistry/index-1.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-2.html $(prefix)/doc/chemistry/index-2.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-3.html $(prefix)/doc/chemistry/index-3.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-4.html $(prefix)/doc/chemistry/index-4.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-5.html $(prefix)/doc/chemistry/index-5.html
	$(mkinstalldirs) $(prefix)/doc/chemistry/
	$(INSTALL_DATA) index-6.html $(prefix)/doc/chemistry/index-6.html

uninstall-local:
	-rm -f $(prefix)/doc/chemistry/index.html
	-rm -f $(prefix)/doc/chemistry/index-1.html
	-rm -f $(prefix)/doc/chemistry/index-2.html
	-rm -f $(prefix)/doc/chemistry/index-3.html
	-rm -f $(prefix)/doc/chemistry/index-4.html
	-rm -f $(prefix)/doc/chemistry/index-5.html
	-rm -f $(prefix)/doc/chemistry/index-6.html

####### kdevelop will overwrite this part!!! (end)############
